--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "ts-node src/index.ts",
         "dev-build": "webpack --mode development --watch",
-        "dev-start": "/usr/bin/electron ./dist/main.js"
+        "dev-start": "electron ./dist/main.js"
     },
     "author": "",
     "license": "ISC",
@@ -25,14 +25,14 @@
         "ts-loader": "^7.0.4",
         "ts-node": "^8.10.1",
         "tsc": "^1.20150623.0",
-        "typescript": "^3.8.3",
+        "typescript": "^3.9.3",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11"
     },
     "dependencies": {
-        "@material-ui/core": "^4.9.14",
+        "@material-ui/core": "^4.10.0",
         "@material-ui/icons": "^4.9.1",
-        "@material-ui/lab": "^4.0.0-alpha.53",
+        "@material-ui/lab": "^4.0.0-alpha.54",
         "@types/react-leaflet": "^2.5.1",
         "css-loader": "^3.5.3",
         "file-loader": "^6.0.0",
@@ -40,7 +40,7 @@
         "inquirer-autocomplete-prompt": "^1.0.2",
         "leaflet": "^1.6.0",
         "node-sass": "^4.14.1",
-        "pg": "^8.0.3",
+        "pg": "^8.2.1",
         "react-leaflet": "^2.7.0",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.2.1",
