--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "file-loader": "^6.0.0",
         "inquirer": "^7.1.0",
         "inquirer-autocomplete-prompt": "^1.0.2",
+        "knex": "^0.21.1",
         "leaflet": "^1.6.0",
         "node-sass": "^4.14.1",
         "pg": "^8.2.1",
