--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/electron": "^1.6.10",
+        "@types/geojson": "^7946.0.7",
         "@types/inquirer": "^6.5.0",
         "@types/node": "^13.13.9",
         "@types/pg": "^7.14.3",
